--- a/quest.yml
+++ b/quest.yml
@@ -1,4 +1,4 @@
-id: example_test1
+id: dana_quest_1
 title: Funnel Drop
 subtitle: Find the cause of user traffic drop in production and fix it
 description: "Dana thinks – What’s worse than a bug? A bug that happens in the production environment! \nIt affects real users, who often have pitchforks and torches and would not hesitate to use them on you. Time to learn how to handle such bugs—from getting a support ticket, through bug replication, to making sure it can’t bug (ha!) anyone ever again."
